<resources>
    <string name="app_name">Exercise 01</string>
    <string name="heading">Is baby yoda cute?</string>
    <string name="first_line">English</string>
    <string name="second_line">And German</string>
    <string name="third_line">And even Russia !</string>
    <string name="all_line">So much languages supported. So awesome!</string>
    <string name="left_button">Yes</string>
    <string name="right_button">No</string>
    <string name="long_text">The child (called Baby Yoda) was born at 41 VSY and was apparently still an infant at the age of fifty,
         who was held by Nikto mercenaries at a facility on the planet Arvala-7.
         The Imperial employer hired a Mandalorian bounty hunter
         to get the child out of the facility and deliver it to the client.
         On the way back, however, the bounty hunter, known only as the Mandalorian, discovered
         that important parts of his spaceship, the Razor Crest, were stolen by Jawas of the desert planet,
         so they walked back to Kuiils ranch through the desert</string>
    <string name="popup_msg">Choice on last visit:</string>
    <string name="popup_msg_not_clicked">No Button Clicked</string>
</resources>