<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/holo_green_light"
        android:text="@string/heading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_yoda"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:src="@drawable/baby_yoda"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <Button
        android:id="@+id/left_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/left_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/right_button"
        app:layout_constraintTop_toBottomOf="@id/image_yoda" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/right_button"
        app:layout_constraintLeft_toRightOf="@id/left_Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_yoda" />

    <TextView
        android:id="@+id/three_liner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/darker_gray"
        android:text="@string/all_line"
        app:layout_constraintBottom_toBottomOf="@id/third_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/third_line"
        app:layout_constraintTop_toTopOf="@id/first_line" />

    <TextView
        android:id="@+id/first_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/first_line"
        app:layout_constraintRight_toRightOf="@id/third_line"
        app:layout_constraintTop_toBottomOf="@id/right_button"
        app:layout_constraintBottom_toTopOf="@id/second_line" />

    <TextView
        android:id="@+id/second_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_line"
        app:layout_constraintRight_toRightOf="@id/first_line"
        app:layout_constraintTop_toBottomOf="@id/first_line"
        app:layout_constraintBottom_toTopOf="@id/third_line"/>

    <TextView
        android:id="@+id/third_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_line"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_line"
        app:layout_constraintBottom_toTopOf="@id/long_text"
        app:layout_constraintLeft_toRightOf="@id/three_liner"/>

    <ScrollView
        android:id="@+id/long_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_text"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>